--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "classnames": "^2.5.1",
     "dayjs": "^1.11.10",
     "microcms-js-sdk": "^3.1.0",
-    "next": "14.1.4",
+    "next": "^14.2.23",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "rimraf": "^6.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
