--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dayjs": "^1.11.10",
     "microcms-js-sdk": "^3.1.0",
     "next": "^14.2.23",
+    "nextjs-basic-auth-middleware": "^3.1.0",
     "react": "^18",
     "react-dom": "^18",
     "rimraf": "^6.0.1"
